--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1097,28 +1097,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Toronto',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
        " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
-       " 'Greenville',\n",
+       " 'Pyeongchang',\n",
        " 'Albuquerque',\n",
-       " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
+       " 'Archipelago Sea',\n",
+       " 'Solta',\n",
        " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Salina Island',\n",
+       " 'Buenos Aires',\n",
+       " 'Greenville',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Iguazu Falls']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
        "13"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
